syntax = "proto3";
option optimize_for = LITE_RUNTIME;
import "init.proto";
import "game.proto";
import "command.proto";
import "event.proto";

package bwapi.message;

// Wrapper used to distinguish which message is which.
message Message {
	oneof msg {
		// Init
		bwapi.init.ClientBroadcast initBroadcast = 1;
		bwapi.init.ServerResponse initResponse = 2;
		bwapi.init.ClientResolution initResolution = 3;

		// Game
		bwapi.game.FrameUpdate frameUpdate = 1000;
        bwapi.game.EndOfQueue endOfQueue = 4;

        //Command
        bwapi.command.Command command = 5;

        //Event
        bwapi.event.Event event = 6;
	}
}
